--- a/Style.css
+++ b/Style.css
@@ -170,7 +170,7 @@ text-align: center;
     opacity: 0.9;
 }
 /*position*/
-.position{
+/*.position{
 border: 4px solid black;
 margin-top: 40px;
 padding: 20px;
@@ -181,4 +181,4 @@ padding: 20px;
     width: 50px;
     height: 50px;
     background: lightcoral;
-}
+}*/
